k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: davy-page-deployment
  namespace: davy
spec:
  selector:
    matchLabels:
      app: davy-page-deployment
  template:
    metadata:
      labels:
        app: davy-page-deployment
    spec:
      containers:
      - name: davy-page
        image: cr.selcloud.ru/davy/davy-page:v0.0.24
        imagePullPolicy: Always
        resources:
          requests:
            memory: "170Mi"
            cpu: "10m" 
          limits:
            memory: "340Mi"
            cpu: "100m"
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /img/logo.svg
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
      imagePullSecrets:
      - name: vault-registry-secret
