k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: davy-page-service
  namespace: davy
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: davy-page-deployment
