k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: davy-page
  namespace: davy
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - davy.page
    secretName: davy-tls
  rules:
  - host: davy.page
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: davy-page-service
            port:
              number: 80
